--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tablero</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel = "stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
-    <link rel="manifest" href="manifest.json">
     <title>Metronomo</title>
 </head>
 
