--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Metronomo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel = "stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
